--- a/GamerMatch/GamerMatch/Info.plist
+++ b/GamerMatch/GamerMatch/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please select a photo</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Trying to access your current location</string>
 	<key>NSLocationAlwaysUsageDescription</key>
