--- a/GamerMatch/GamerMatch/Info.plist
+++ b/GamerMatch/GamerMatch/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>comic_sans_ms_bold.ttf</string>
+		<string>comic_sans_ms.ttf</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Please select a photo</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
